# pystreams

./: .copier-answers.yaml  .gitattributes  .gitignore  404.html  CONTRIBUTING.md  README.md  Taskfile.dist.yaml  environment.yaml  environment.yml  flake.nix  index.html  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml  docs.yml  draft.yaml  draft.yml  lint.yaml  test-multiplatform.yaml  test-multiplatform.yml  test.yml
.trunk/: trunk.yaml
docs/: docusaurus.config.js  docusaurus.config.mts  docusaurus.config.ts
docs/docs/: 01-Index.md
pystreams/: LICENSE  README.md  pyproject.toml
pystreams/docs/: mkdocs.yml
pystreams/docs/docs/: index.md
pystreams/src/pystreams/: __init__.py  ffmpeg.py  minio.py  pipe.py  srt.py  stream.py
search/: search_index.json
src/pystreams/: base.py  ffmpeg.py  gstreamer.py  minio.py  pipe.py  process.py  s3.py  srt.py  stream.py
tests/: test_dummy.py
usage/: index.html
