[project]
name = "pystreams"
version = "0.14.0"
classifiers = ["Private :: Do Not Upload"]
requires-python = "~= 3.13.0"

[dependency-groups]
dev = [
  # Template management
  "copier ~= 9.6.0",
  # Testing framework
  "pytest ~= 9.0.0",
  # Asyncio support for pytest
  "pytest-asyncio ~= 1.3.0",
]

[build-system]
requires = ["uv_build ~= 0.7.0"]
build-backend = "uv_build"

[tool.pyright]
# Analyze code only in these directories
include = ["src", "tests"]

# Specify the path to the virtual environment
venv = ".venv"
venvPath = "."

# Python version and platform to target
pythonPlatform = "All"
pythonVersion = "3.13"

[tool.pytest.ini_options]
# Remove in the future: https://github.com/pytest-dev/pytest-asyncio/issues/924
asyncio_default_fixture_loop_scope = "function"
